ingress/loki-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: loki-ingress
  namespace: default
spec:
  rules:
  - host: loki.rizzserve.site
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: loki-server
            port:
              number: 3100
